work on adding maps api for geolocation

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
  <!-- container div for react app to atttach to  -->
  <div id = "app"></div>
  <!-- call react -->
+ <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=places&key=AIzaSyD8oJEU01e30XplGKVXpxfPMHvP2NrittE"></script>
  <script src="bundle.js"></script>
 
 </body>
